--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ import { cueritos } from "../utils/cueritos";
       alt="Portada"
       width={800}
       height={500}
-      class="absolute right-0 bottom-0 md:translate-y-1/4 translate-y-40 md:translate-x-56"
+      class="absolute right-0 bottom-0 md:translate-y-1/4 translate-y-24 min-[450px]:translate-y-36 sm:translate-y-44 md:translate-x-56"
     />
   </div>
   <div class="bg-[rgba(0,0,0,0.8)] px-4 md:px-6 py-12 md:py-24 lg:py-32">
