--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,13 +25,15 @@ import PhoneSvg from "./ui/PhoneSvg.astro";
       <span class="text-xl font-bold line-clamp-1">Cueritos Kids</span>
     </div>
     <div>
-      <button
+      <a
+        target="_blank"
+        href='https://wa.me/51904092399?text=Hola,%20me%20gustaría%20ordenar%20un%20producto'
         aria-label="Enviar un mensaje"
         class="bg-blue-600 flex items-center gap-2 py-1 px-4 cursor-pointer rounded-md"
       >
         <span><PhoneSvg class="size-4" /></span>
         <span>Ordenar</span>
-      </button>
+      </a>
     </div>
   </div>
 </header>
