--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,15 +8,17 @@ import { cueritos } from "../utils/cueritos";
   style="background: radial-gradient(#fff 10%, transparent 30%);background-size: 10px 10px;mask: linear-gradient(#000 80%,transparent);"
 >
   <div class="absolute h-full container mx-auto right-0 left-0 -z-10">
-    <Image
-      src={cueritos}
+    <img
+      src={cueritos.src}
+      loading="eager" fetchpriority="high"
       alt="Portada"
       width={800}
       height={500}
-      class="absolute right-0 bottom-0 md:translate-y-1/4 translate-y-24 min-[450px]:translate-y-36 sm:translate-y-44 md:translate-x-56"
+      class="absolute right-0 bottom-0 md:translate-y-1/4 translate-y-24 min-[450px]:translate-y-36 sm:translate-y-44 md:translate-x-40"
     />
   </div>
-  <div class="bg-[rgba(0,0,0,0.8)] px-4 md:px-6 py-12 md:py-24 lg:py-32">
+  <div class="absolute top-0 left-0 right-0 bottom-0 w-full h-full bg-[rgba(0,0,0,0.8)] -z-10"></div>
+  <div class="px-4 md:px-6 py-12 md:py-24 lg:py-32">
     <div
       class="grid gap-6 lg:grid-cols-2 lg:gap-12 items-center container mx-auto md:px-6"
     >
