--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -5,7 +5,7 @@ interface Props {
   product: Product;
 }
 const { product } = Astro.props;
-const image = product.imagen[0] as ImageMetadata ;
+const image = product.imagen[0];
 ---
 
 <div class="group relative overflow-hidden rounded-lg border border-white/20">
