--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -31,7 +31,7 @@ const products = await getProducts();
     </div>
     <div class="flex justify-center mt-12">
       <button
-        onclick="alert('hola');console.log('hola')"
+        onclick="alert('No available');"
         class="bg-blue-600 hover:bg-blue-500 cursor-pointer transition-all px-4 py-2 rounded-3xl flex items-center gap-1"
       >
         <span>Ver más</span>
