--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -26,6 +26,7 @@ import { cueritos } from "../utils/cueritos";
           type="email"
           placeholder="Tu correo electrónico"
           class="flex-1 px-4 py-3 rounded-md text-black bg-white"
+          disabled
         />
         <button aria-label="Click para suscribirse y recibir promociones" class="bg-black hover:bg-gray-800 px-6 py-2 rounded-md"
           >Suscribirse</button
