--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from "astro:assets";
 import { cueritos } from "../utils/cueritos";
 ---
 
@@ -10,14 +9,18 @@ import { cueritos } from "../utils/cueritos";
   <div class="absolute h-full container mx-auto right-0 left-0 -z-10">
     <img
       src={cueritos.src}
-      loading="eager" fetchpriority="high"
+      loading="eager"
+      fetchpriority="high"
       alt="Portada"
       width={800}
       height={500}
       class="absolute right-0 bottom-0 md:translate-y-1/4 translate-y-24 min-[450px]:translate-y-36 sm:translate-y-44 md:translate-x-40"
     />
   </div>
-  <div class="absolute top-0 left-0 right-0 bottom-0 w-full h-full bg-[rgba(0,0,0,0.8)] -z-10"></div>
+  <div
+    class="absolute top-0 left-0 right-0 bottom-0 w-full h-full bg-[rgba(0,0,0,0.8)] -z-10"
+  >
+  </div>
   <div class="px-4 md:px-6 py-12 md:py-24 lg:py-32">
     <div
       class="grid gap-6 lg:grid-cols-2 lg:gap-12 items-center container mx-auto md:px-6"
@@ -35,17 +38,78 @@ import { cueritos } from "../utils/cueritos";
           </p>
         </div>
         <div class="flex flex-col gap-3 min-[400px]:flex-row">
-          <button
+          <a
+            href="#products"
             aria-label="Click para ver los productos"
             class="px-8 py-2 border bg-white text-zinc-900 cursor-pointer"
-            >Ver Productos</button
+            >Ver Productos</a
           >
-          <button
+          <a
+            target="_blank"
+            href="https://wa.me/51904092399?text=Hola,%20me%20gustaría%20hacer%20un%20pedido"
             aria-label="Click aquí para hacer un pedido"
             class="px-8 py-2 border cursor-pointer hover:bg-white hover:text-zinc-900 transition-colors"
           >
             Hacer Pedido
-          </button>
+          </a>
+        </div>
+        <div class="flex gap-1">
+          <a
+            href="https://www.instagram.com/darkuero/"
+            class="hover:scale-125 transition-transform hover:text-blue-500"
+          >
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1"
+              class="size-8"
+            >
+              <path
+                d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"
+              ></path>
+              <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+              <path d="M16.5 7.5l0 .01"></path>
+            </svg>
+          </a>
+          <a
+            href=""
+            class="hover:scale-125 transition-transform hover:text-blue-500"
+          >
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1"
+              class="size-8"
+            >
+              <path
+                d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
+              ></path>
+            </svg>
+          </a>
+          <a
+            href="https://www.tiktok.com/@cueritos.kids"
+            class="hover:scale-125 transition-transform hover:text-blue-500"
+          >
+            <svg
+              class="size-8"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1"
+            >
+              <path
+                d="M21 7.917v4.034a9.948 9.948 0 0 1 -5 -1.951v4.5a6.5 6.5 0 1 1 -8 -6.326v4.326a2.5 2.5 0 1 0 4 2v-11.5h4.083a6.005 6.005 0 0 0 4.917 4.917z"
+              ></path>
+            </svg>
+          </a>
         </div>
       </div>
     </div>
