links social media

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,6 +10,7 @@
           <a
             href="https://www.instagram.com/darkuero/"
             class="hover:scale-125 transition-transform hover:text-blue-500"
+            aria-label="click para ir a nuestro Instagram"
           >
             <svg
               viewBox="0 0 24 24"
@@ -29,6 +30,7 @@
           </a>
           <a
             href=""
+            aria-label="click para ir a nuestro Facebook"
             class="hover:scale-125 transition-transform hover:text-blue-500"
           >
             <svg
@@ -48,6 +50,7 @@
           <a
             href="https://www.tiktok.com/@cueritos.kids"
             class="hover:scale-125 transition-transform hover:text-blue-500"
+            aria-label="click para ir a nuestro TikTok"
           >
             <svg
               class="size-8"
