--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -56,6 +56,7 @@ import { cueritos } from "../utils/cueritos";
         <div class="flex gap-1">
           <a
             href="https://www.instagram.com/darkuero/"
+            aria-label="Click para ir a nuestro Instagram"
             class="hover:scale-125 transition-transform hover:text-blue-500"
           >
             <svg
@@ -77,6 +78,7 @@ import { cueritos } from "../utils/cueritos";
           <a
             href=""
             class="hover:scale-125 transition-transform hover:text-blue-500"
+            aria-label="Click para ir a nuestro Facebook"
           >
             <svg
               viewBox="0 0 24 24"
@@ -94,6 +96,7 @@ import { cueritos } from "../utils/cueritos";
           </a>
           <a
             href="https://www.tiktok.com/@cueritos.kids"
+            aria-label="Click para ir a nuestro TikTok"
             class="hover:scale-125 transition-transform hover:text-blue-500"
           >
             <svg
