--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -76,7 +76,7 @@ import { cueritos } from "../utils/cueritos";
             </svg>
           </a>
           <a
-            href=""
+            href="https://www.facebook.com/share/15WbJem6UP/"
             class="hover:scale-125 transition-transform hover:text-blue-500"
             aria-label="Click para ir a nuestro Facebook"
           >
