links social media

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,7 @@
             </svg>
           </a>
           <a
-            href="https://www.facebook.com/share/15WbJem6UP/"
+            href="https://www.facebook.com/share/18ysAQVwdY/"
             aria-label="click para ir a nuestro Facebook"
             class="hover:scale-125 transition-transform hover:text-blue-500"
           >
