--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -55,7 +55,7 @@ import { cueritos } from "../utils/cueritos";
         </div>
         <div class="flex gap-1">
           <a
-            href="https://www.instagram.com/darkuero/"
+            href="https://www.instagram.com/cueritos.kids/"
             aria-label="Click para ir a nuestro Instagram"
             class="hover:scale-125 transition-transform hover:text-blue-500"
           >
@@ -76,7 +76,7 @@ import { cueritos } from "../utils/cueritos";
             </svg>
           </a>
           <a
-            href="https://www.facebook.com/share/15WbJem6UP/"
+            href="https://www.facebook.com/share/18ysAQVwdY/"
             class="hover:scale-125 transition-transform hover:text-blue-500"
             aria-label="Click para ir a nuestro Facebook"
           >
